--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Dependencies
+      - name: Set up dependencies
         run: |
           sudo apt-get update
           sudo apt-get install ninja-build automake autoconf libtool libtool-bin
@@ -29,21 +29,21 @@ jobs:
           # zlib
           sudo apt-get install zlib1g-dev 
           
-      - name: Installation
+      - name: Install HDF5
         run: |
           mydir="$PWD"
           export HDF5_DIR=$mydir/hdf5/install
-          export VOL_DIR=$mydir
-          
           mkdir $HDF5_DIR
-          # Compile HDF5
           cd hdf5
           export HDF5_LIBTOOL=/usr/bin/libtoolize
           ./autogen.sh
           ./configure --prefix=$HDF5_DIR --enable-parallel
           make && make install
-          
-          # Compile VOL connector
+
+      - name: Install
+        run: |          
+          mydir="$PWD"
+          export VOL_DIR=$mydir
           cd $VOL_DIR
           autoreconf -fvi
           ./configure --with-hdf5=${HDF5_DIR} --enable-shared --enable-zlib
