OESS-205: Remove unncessary file. Revert Makefile.am change. Continue Action when failure occurs.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   vol-log:
     runs-on: ubuntu-latest
-
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v2
       
@@ -62,7 +62,6 @@ jobs:
           cd $mydir
           cd test
           make check
-          cat test/basic/test-suite.log
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
