--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Set up dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install ninja-build automake autoconf libtool libtool-bin
+          sudo apt-get install automake autoconf libtool libtool-bin m4
           # hdf5
           git clone https://github.com/HDFGroup/hdf5.git
           # mpi
-          sudo apt-get install libopenmpi-dev
+          sudo apt-get install mpich
           # zlib
           sudo apt-get install zlib1g-dev 
           
