--- a/.github/workflows/linux_1.12.yml
+++ b/.github/workflows/linux_1.12.yml
@@ -60,7 +60,8 @@ jobs:
           export HDF5_PLUGIN_PATH="$VOL_DIR/src"
           export HDF5_VOL_CONNECTOR="LOG under_vol=0;under_info={}"
           cd $mydir
-          cd test
+          # cd test
+          # make tests
           make check
           cat test/basic/test-suite.log
       - name: Upload
