OESS-205: Turn off HDF5_PLUGIN_PATH and HDF5_VOL_CONNECTOR.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -53,11 +53,11 @@ jobs:
         run: |
           mydir="$PWD"
           export H5_DIR=$mydir/hdf5
-          export VOL_DIR=$mydir/
+          export VOL_DIR=$mydir
           export HDF5_DIR=$mydir/hdf5/install
           export LD_LIBRARY_PATH=$VOL_DIR/src:$H5_DIR/install/lib:$LD_LIBRARY_PATH
-          export HDF5_PLUGIN_PATH="$VOL_DIR/src"
-          export HDF5_VOL_CONNECTOR="LOG under_vol=0;under_info={}"
+          # export HDF5_PLUGIN_PATH="$VOL_DIR/src"
+          # export HDF5_VOL_CONNECTOR="LOG under_vol=0;under_info={}"
           cd $mydir
           cd test
           make check
