--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -57,11 +57,11 @@ jobs:
           export HDF5_DIR=$mydir/hdf5/install
           export LD_LIBRARY_PATH=$VOL_DIR/src:$H5_DIR/install/lib:$LD_LIBRARY_PATH
           # export HDF5_PLUGIN_PATH="$VOL_DIR/src"
-          # export HDF5_VOL_CONNECTOR="LOG under_vol=0;under_info={}"
+          export HDF5_VOL_CONNECTOR="LOG under_vol=0;under_info={}"
           cd $mydir
           cd test
           make check
-        continue-on-error: true
+        # continue-on-error: true
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
