--- a/.github/workflows/linux_1.12.yml
+++ b/.github/workflows/linux_1.12.yml
@@ -26,7 +26,7 @@ jobs:
           # hdf5
           git clone https://github.com/HDFGroup/hdf5.git -b hdf5_1_12_1
           # mpi
-          sudo apt-get install libopenmpi-dev
+          sudo apt-get install mpich
           # zlib
           sudo apt-get install zlib1g-dev 
           
